[package]
name = "rust_shader_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.0"
image = { version = "0.24.8", features = ["png", "jpeg"] }
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
