[package]
name = "rust_shader_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
egui = { version = "0.26.0", features = ["log"] }
egui-wgpu = "0.26.0"
egui-winit = "0.26.0"
env_logger = "0.11.0"
image = { version = "0.24.8", features = ["png", "jpeg"] }
log = "0.4.20"
naga = { version = "0.19.0", features = ["wgsl-in", "compact", "glsl-in"] }
pollster = "0.3.0"
rfd = "0.13.0"
syntect = { version = "5.2.0", features = ["default-fancy"] }
thiserror = "1.0.57"
tobj = { version = "4.0.1", features = ["async"] }
wgpu = { version = "0.19.1", features = ["naga-ir", "glsl"] }
winit = "0.29.10"

[build-dependencies]
anyhow = "1.0.79"
fs_extra = "1.3.0"
glob = "0.3.1"
